Bug 160444 - Crash on closing the 3D-Effects Window
Summary: Crash on closing the 3D-Effects Window
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: high major
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.8.0 target:24.2.3
Keywords: bibisected, bisected, haveBacktrace, regression
: 160645 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-31 10:53 UTC by Regina Henschel
Modified: 2024-05-08 06:41 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["vcl::Window::Invalidate(InvalidateFlags)"]


Attachments
Callstack from VS (3.83 KB, text/plain)
2024-03-31 10:53 UTC, Regina Henschel
Details
bt (11.06 KB, text/plain)
2024-03-31 19:30 UTC, Julien Nabet
Details
Valgrind trace (32.09 KB, application/x-bzip2)
2024-03-31 21:18 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2024-03-31 10:53:33 UTC
Created attachment 193414 [details]
Callstack from VS

Start Draw. Open the "3D Effects" dialog window. Close it with the cross in its title bar or with shortcut Alt+F4. => Crash.

If you do not have the icon in a toolbar insert a 3D-object e.g. a 3D cube. Its context menu has the icon for the "3D Effects" dialog window.

I see the crash e.g in Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c9d4f99b2bb54ac7735b3e0d0cadbafbd0279518
CPU threads: 32; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

I get no crash in Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 32; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

With a debug build I get the attached call stack.
Comment 1 Julien Nabet 2024-03-31 19:30:24 UTC
Created attachment 193419 [details]
bt

On pc Debian x86-64 with master sources updated today, I could reproduce this with gen rendering (not with gtk3 one).
Comment 2 Julien Nabet 2024-03-31 21:18:03 UTC
Created attachment 193420 [details]
Valgrind trace
Comment 3 Xisco Faulí 2024-04-01 12:03:10 UTC
Regression introduced by:

author	Patrick Luby <plubius@libreoffice.org>	2024-01-10 19:30:17 -0500
committer	Patrick Luby <plubius@libreoffice.org>	2024-01-14 12:52:16 +0100
commit 563f7077f1dbce31ff95ee8d2e8d17b629693db1 (patch)
tree 0965b6afe59c098e2669277c125b22434dafe8c2
parent e22df0adeec10fb7c7e727b9347cb481a334de09 (diff)
tdf#159089 dispose custom accessible here and unset for `m_xDrawingArea`

Bisected with: bibisect-linux64-24.8
Comment 4 Commit Notification 2024-04-01 17:27:45 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/053f7f9ff5a475446da2855e2e71f3ea0ef18791

tdf#160444 check device's owner window is a nullptr

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Patrick (volunteer) 2024-04-01 17:31:49 UTC
I have committed a fix this bug. The fix should be in tomorrow's (02 April 2024) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for macOS testers: the nightly master builds install in /Applications/LibreOfficeDev.app. These builds are not codesigned like regular LibreOffice releases so you will need to execute the following Terminal command after installation but before you launch /Applications/LibreOfficeDev:

xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 6 Julien Nabet 2024-04-01 18:17:33 UTC
With master sources updated today (053f7f9ff5a475446da2855e2e71f3ea0ef18791), I don't reproduce the crash anymore.

Thank you Patrick! :-)
Comment 7 Commit Notification 2024-04-01 23:37:25 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/4241a641a433511ae9c3e1795de445a25eab14d8

tdf#160444 check device's owner window is a nullptr

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 m_a_riosv 2024-04-13 21:21:04 UTC
*** Bug 160645 has been marked as a duplicate of this bug. ***
Comment 9 kalyl 2024-05-08 03:42:15 UTC Comment hidden (spam)