tdf#160444 check device's owner window is a nullptr

Since commit 563f7077f1dbce31ff95ee8d2e8d17b629693db1, the
device's owner window gets deleted before this object is
deleted.

Change-Id: I15dc8db60e5520c2f0e73a9a117f25af15845caf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165637
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
(cherry picked from commit d034036a049d6dcc8dc62a8e44c1e4befcaa25b0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165623
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>